--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
     </div>
 
     <script>
-        conole.log("password is: lasagna")
+        console.log("password is: lasagna")
     </script>
 
 </body>
