--- a/index.html
+++ b/index.html
@@ -2,112 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello internet</title>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>bear🤖</title>
 
-<style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-/* internal style sheet < html doc/dom itself  */
-
+  <!-- internal stylesheet < html doc/dom itself -->
+  <style>
     body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-        background-color: rgb(224, 173, 231);
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
     }
 
     h1 {
-        color: #eadc13;
+      color: #8e4fd6;
+    }
+
+    h2 {
+      color: rgb(194, 153, 53);
+      background-color: rgba(200, 200, 200, 0.1);
     }
 
     .login-container {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(197, 13, 13, 0.1);
-        max-width: 300px;
-        margin-top: 20px;
+      border: solid 1px blue;
+    }
+
+    #author {
+      text-decoration: underline;
+    }
+
+    /*
+    .login-container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      max-width: 300px;
+      margin-top: 20px;
     }
 
     .form-group {
-        margin-bottom: 15px;
+      margin-bottom: 15px;
     }
 
     label {
-        display: block;
-        margin-bottom: 5px;
+      display: block;
+      margin-bottom: 5px;
     }
 
     input[type="text"],
     input[type="password"] {
-        width: 100%;
-        padding: 8px;
-        box-sizing: border-box;
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
     }
 
     .btn-login {
-        background-color: #28a745;
-        color: white;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 100%;
+      background-color: #28a745;
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 100%;
     }
 
     .btn-login:hover {
-        background-color: #218838;
+      background-color: #218838;
     }
 
     .message {
-        margin-top: 10px;
-        color: red;
+      margin-top: 10px;
+      color: red;
+    } */
+
+    .inlineList>li {
+      display: inline;
     }
-</style>
+  </style>
+</head>
 
 <body>
 
-    <h1>✌️hello internet</h1>
-    <p>Poppy Dalton</p>
-<!-- 
-    <h2>features</h2>
-    <ul>
-        <li>login</li>
-        <li>search</li>
-        <li>content "card"</li>
-        <li>footer</li>
-    </ul>  -->
+  <h1>🙋‍♂️ a web dev learning place.</h1>
+  <p id="author">by 🤖bc</p>
 
-<!-- this is how to do a comment--->
- 
-    <div class="login-container">
-        <style>
-        h2 {
-            text-align: center;
-            color: purple;
-        }
-        </style>
-        <h2>UNA Login</h2>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="put in your name" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn-login">Login</button>
-            <div id="message" class="message"></div>
-        </form>
-    </div>
+  <h2>layout/features</h2>
+  <ul class="inlineList">
+    <li>nav bar, w/login</li>
+    <li>search</li>
+    <li>content <a href="pages/content.html">content "cards"</a> with tags</li>
+  </ul>
 
-    <script>
-        console.log("password is: lasagna")
-    </script>
+  <h2>Where are we?</h2>
+  <ul>
+    <li>we are on our APP!</li>
+    <li>this APP is deployed via GitHub Pages, this URL: https://barrycumbie.github.io/baribot/</li>
+    <li>our <xmp><code /></xmp> lives on our GithHub Rep: https://github.com/barrycumbie/baribot</li>
+    <li>we've got basic, vanilla <xmp>
+        <html>
+      </xmp> going, but not much else
+    <li>we've got: absolute/relative links, bs5 css, a pages/ directory</li>
+  </ul>
+
+  <h2>Where are we going?</h2>
+  <ul>
+    <li>let's login, vanilla style</li>
+  </ul>
+
+  <a href="pages/vanilla-login.html">vanilla html login</a>
+
 
 </body>
-
 
 </html>
