--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bear🤖</title>
+  <title>pdalton</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -88,7 +88,7 @@
 <body>
 
   <h1>🙋‍♂️ a web dev learning place.</h1>
-  <p id="author">by 🤖bc</p>
+  <p id="author">by pdalton</p>
 
   <h2>layout/features</h2>
   <ul class="inlineList">
