--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
 
-  <h1>🙋‍♂️ a web dev learning place.</h1>
+  <h1>a web dev learning place.</h1>
   <p id="author">by pdalton</p>
 
   <h2>layout/features</h2>
