--- a/pages/vanilla-login.html
+++ b/pages/vanilla-login.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🤖/vanilla login</title>
+  <title>vanilla login</title>
+
+  <link href="../styles/pdalton-style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +17,7 @@
     <form id="loginForm">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="put ur name" value="Poppy" required>
+        <input type="text" id="username" name="username" placeholder="put ur name" value="poppy" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
@@ -27,36 +29,7 @@
   </div>
 
 
-  <script>
-    console.log("password is: lasagna");
-
-    //when button clicked, get username and password. 
-
-    //pass an Immediately Invoked Function Expression: IIFE.
-    document.addEventListener('submit', function (event) {
-      event.preventDefault();
-
-      // Get form values from the DOM 
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-      console.log("username + pwd:", username + ", " + password);
-
-      // Store in session storage
-      sessionStorage.setItem('username', username);
-      sessionStorage.setItem('password', password);
-      // sessionStorage.setItem('loginTimestamp', new Date().toISOString());
-      // sessionStorage.setItem('loginAttempts', (parseInt(sessionStorage.getItem('loginAttempts') || '0') + 1).toString());
-
-      // Log to console
-      console.log('session username:', username);
-      console.log('session password:', password);
-
-      window.location.assign("content.html"); 
-  
-    });
-
-
+  <script src="../scripts/login-script.js">
 
 
   </script>
