--- a/pages/content.html
+++ b/pages/content.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link href="../styles/bear-style.css" rel="stylesheet">
+  <link href="../styles/pdalton-style.css" rel="stylesheet">
 
 
 </head>
